tests/machine/x/ts/partial_application.ts
function add(a, b) {
  return (a + b);
}
let add5 = add(5);
console.log(add5(3));
